--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ CSV/output.csv
 CSV_Operations/__pycache__
 CSV/export_Kunden_DE_E - Kopie.csv
 CSV/export_Kunden_DE_E copy.csv
+CSV/Formattiert_export_Kunden_DE_E.csv
